--- a/src/main/resources/BrickDestroy_Info.fxml
+++ b/src/main/resources/BrickDestroy_Info.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<StackPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="BrickDestroy.JavaFX_StageController.JavaFXInfoMenuController">
    <children>
       <ImageView fitHeight="400.0" fitWidth="600.0" pickOnBounds="true" StackPane.alignment="CENTER">
          <image>
@@ -18,7 +18,7 @@
       </ImageView>
       <AnchorPane prefHeight="270.0" prefWidth="600.0">
          <children>
-            <Button layoutY="329.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="146.0" text="Back" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="40.0">
+            <Button layoutY="329.0" mnemonicParsing="false" onAction="#backToMenu" prefHeight="70.0" prefWidth="146.0" text="Back" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="40.0">
                <font>
                   <Font size="18.0" />
                </font>
