--- a/src/main/resources/BrickDestroy_GameBoard.fxml
+++ b/src/main/resources/BrickDestroy_GameBoard.fxml
@@ -5,7 +5,10 @@
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
@@ -20,7 +23,7 @@
          <image>
             <Image url="@BrickDestroy_Level_Background.jpg" />
          </image></ImageView>
-      <Pane fx:id="gameBoardPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#onKeyPressed" onKeyReleased="#onKeyReleased" onKeyTyped="#onKeyTyped" prefHeight="400.0" prefWidth="600.0" StackPane.alignment="CENTER">
+      <Pane fx:id="gameBoardPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#onKeyPressed" onKeyReleased="#onKeyReleased" onKeyTyped="#onKeyTyped" prefHeight="400.0" prefWidth="600.0" visible="false" StackPane.alignment="CENTER">
          <children>
             <Text fx:id="displayBallLeft" layoutX="14.0" layoutY="380.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Balls left:" wrappingWidth="150.4000000000001">
                <font>
@@ -32,28 +35,154 @@
                   <Font name="Bauhaus 93" size="24.0" />
                </font>
             </Text>
+            <Text fx:id="pauseMessage" fill="RED" layoutX="167.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Press spacebar to play..." wrappingWidth="265.6640625">
+               <stroke>
+                  <LinearGradient endX="1.0" endY="1.0">
+                     <stops>
+                        <Stop>
+                           <color>
+                              <Color />
+                           </color>
+                        </Stop>
+                        <Stop offset="1.0">
+                           <color>
+                              <Color red="1.0" green="1.0" blue="1.0" />
+                           </color>
+                        </Stop>
+                     </stops>
+                  </LinearGradient>
+               </stroke>
+               <font>
+                  <Font name="Bauhaus 93" size="24.0" />
+               </font>
+            </Text>
          </children></Pane>
-      <Text fx:id="pauseMessage" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" text="Press spacebar to play...">
-         <stroke>
-            <LinearGradient endX="1.0" endY="1.0">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
-                     </color>
-                  </Stop>
-               </stops>
-            </LinearGradient>
-         </stroke>
-         <font>
-            <Font name="Bauhaus 93" size="24.0" />
-         </font>
-      </Text>
+      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="High Score" textAlignment="CENTER" wrappingWidth="285.46722412109375">
+               <font>
+                  <Font name="Bauhaus 93" size="48.0" />
+               </font>
+            </Text>
+            <GridPane fx:id="highScorePane" maxWidth="-Infinity" prefHeight="299.0" prefWidth="475.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.39996337890625" minWidth="10.0" prefWidth="60.399973678588864" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="496.79998779296875" minWidth="10.0" prefWidth="231.60002632141112" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="496.79998779296875" minWidth="10.0" prefWidth="232.1999633789062" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="1.">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets bottom="1.0" top="1.0" />
+                     </GridPane.margin>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="2." GridPane.rowIndex="1">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets bottom="1.0" top="1.0" />
+                     </GridPane.margin>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="3." GridPane.rowIndex="2">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets bottom="1.0" top="1.0" />
+                     </GridPane.margin>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="4." GridPane.rowIndex="3">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets bottom="1.0" top="1.0" />
+                     </GridPane.margin>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="5." GridPane.rowIndex="4">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets bottom="1.0" top="1.0" />
+                     </GridPane.margin>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="6." GridPane.rowIndex="5">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets bottom="1.0" top="1.0" />
+                     </GridPane.margin>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="7." GridPane.rowIndex="6">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets bottom="1.0" top="1.0" />
+                     </GridPane.margin>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="8." GridPane.rowIndex="7">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets bottom="1.0" top="1.0" />
+                     </GridPane.margin>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="9." GridPane.rowIndex="8">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets bottom="1.0" top="1.0" />
+                     </GridPane.margin>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="10." GridPane.rowIndex="9">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets bottom="1.0" top="1.0" />
+                     </GridPane.margin>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1">
+                     <GridPane.margin>
+                        <Insets bottom="1.0" top="1.0" />
+                     </GridPane.margin>
+                  </Text>
+               </children>
+               <opaqueInsets>
+                  <Insets bottom="5.0" top="10.0" />
+               </opaqueInsets>
+               <padding>
+                  <Insets bottom="10.0" top="10.0" />
+               </padding>
+            </GridPane>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="YOUR CURRENT SCORE:" wrappingWidth="296.15697026252747">
+               <font>
+                  <Font name="Bauhaus 93" size="24.0" />
+               </font>
+            </Text>
+         </children>
+      </VBox>
       <StackPane fx:id="pauseMenu" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#unpause" prefHeight="400.0" prefWidth="600.0" visible="false">
          <children>
             <ImageView fitHeight="400.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
