--- a/src/main/resources/BrickDestroy_GameBoard.fxml
+++ b/src/main/resources/BrickDestroy_GameBoard.fxml
@@ -23,7 +23,7 @@
          <image>
             <Image url="@BrickDestroy_Level_Background.jpg" />
          </image></ImageView>
-      <Pane fx:id="gameBoardPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#onKeyPressed" onKeyReleased="#onKeyReleased" onKeyTyped="#onKeyTyped" prefHeight="400.0" prefWidth="600.0" visible="false" StackPane.alignment="CENTER">
+      <Pane fx:id="gameBoardPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#onKeyPressed" onKeyReleased="#onKeyReleased" onKeyTyped="#onKeyTyped" prefHeight="400.0" prefWidth="600.0" StackPane.alignment="CENTER">
          <children>
             <Text fx:id="displayBallLeft" layoutX="14.0" layoutY="380.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Balls left:" wrappingWidth="150.4000000000001">
                <font>
@@ -57,20 +57,21 @@
                </font>
             </Text>
          </children></Pane>
-      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+      <VBox fx:id="highScoreBoard" alignment="TOP_CENTER" onKeyPressed="#pressSpaceToContinue" prefHeight="200.0" prefWidth="100.0" visible="false">
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="High Score" textAlignment="CENTER" wrappingWidth="285.46722412109375">
                <font>
                   <Font name="Bauhaus 93" size="48.0" />
                </font>
             </Text>
-            <GridPane fx:id="highScorePane" maxWidth="-Infinity" prefHeight="299.0" prefWidth="475.0">
+            <GridPane fx:id="highScorePane" maxWidth="-Infinity" prefHeight="290.0" prefWidth="475.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.39996337890625" minWidth="10.0" prefWidth="60.399973678588864" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="496.79998779296875" minWidth="10.0" prefWidth="231.60002632141112" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="496.79998779296875" minWidth="10.0" prefWidth="232.1999633789062" />
               </columnConstraints>
               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -83,7 +84,7 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="1.">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="1." GridPane.rowIndex="1">
                      <font>
                         <Font name="Bauhaus 93" size="24.0" />
                      </font>
@@ -91,7 +92,7 @@
                         <Insets bottom="1.0" top="1.0" />
                      </GridPane.margin>
                   </Text>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="2." GridPane.rowIndex="1">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="2." GridPane.rowIndex="2">
                      <font>
                         <Font name="Bauhaus 93" size="24.0" />
                      </font>
@@ -99,7 +100,7 @@
                         <Insets bottom="1.0" top="1.0" />
                      </GridPane.margin>
                   </Text>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="3." GridPane.rowIndex="2">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="3." GridPane.rowIndex="3">
                      <font>
                         <Font name="Bauhaus 93" size="24.0" />
                      </font>
@@ -107,7 +108,7 @@
                         <Insets bottom="1.0" top="1.0" />
                      </GridPane.margin>
                   </Text>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="4." GridPane.rowIndex="3">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="4." GridPane.rowIndex="4">
                      <font>
                         <Font name="Bauhaus 93" size="24.0" />
                      </font>
@@ -115,7 +116,7 @@
                         <Insets bottom="1.0" top="1.0" />
                      </GridPane.margin>
                   </Text>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="5." GridPane.rowIndex="4">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="5." GridPane.rowIndex="5">
                      <font>
                         <Font name="Bauhaus 93" size="24.0" />
                      </font>
@@ -123,7 +124,7 @@
                         <Insets bottom="1.0" top="1.0" />
                      </GridPane.margin>
                   </Text>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="6." GridPane.rowIndex="5">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="6." GridPane.rowIndex="6">
                      <font>
                         <Font name="Bauhaus 93" size="24.0" />
                      </font>
@@ -131,7 +132,7 @@
                         <Insets bottom="1.0" top="1.0" />
                      </GridPane.margin>
                   </Text>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="7." GridPane.rowIndex="6">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="7." GridPane.rowIndex="7">
                      <font>
                         <Font name="Bauhaus 93" size="24.0" />
                      </font>
@@ -139,7 +140,7 @@
                         <Insets bottom="1.0" top="1.0" />
                      </GridPane.margin>
                   </Text>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="8." GridPane.rowIndex="7">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="8." GridPane.rowIndex="8">
                      <font>
                         <Font name="Bauhaus 93" size="24.0" />
                      </font>
@@ -147,7 +148,7 @@
                         <Insets bottom="1.0" top="1.0" />
                      </GridPane.margin>
                   </Text>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="9." GridPane.rowIndex="8">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="9." GridPane.rowIndex="9">
                      <font>
                         <Font name="Bauhaus 93" size="24.0" />
                      </font>
@@ -155,7 +156,7 @@
                         <Insets bottom="1.0" top="1.0" />
                      </GridPane.margin>
                   </Text>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="10." GridPane.rowIndex="9">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="10." GridPane.rowIndex="10">
                      <font>
                         <Font name="Bauhaus 93" size="24.0" />
                      </font>
@@ -163,20 +164,146 @@
                         <Insets bottom="1.0" top="1.0" />
                      </GridPane.margin>
                   </Text>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets bottom="1.0" top="1.0" />
                      </GridPane.margin>
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="182.59064483642578" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="8">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="9">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="10">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="174.3765869140625" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="174.3765869140625" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="174.3765869140625" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="174.3765869140625" GridPane.columnIndex="2" GridPane.rowIndex="4">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="174.3765869140625" GridPane.columnIndex="2" GridPane.rowIndex="5">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="174.3765869140625" GridPane.columnIndex="2" GridPane.rowIndex="6">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="174.3765869140625" GridPane.columnIndex="2" GridPane.rowIndex="7">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="174.3765869140625" GridPane.columnIndex="2" GridPane.rowIndex="8">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="174.3765869140625" GridPane.columnIndex="2" GridPane.rowIndex="9">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="174.3765869140625" GridPane.columnIndex="2" GridPane.rowIndex="10">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="NAME:" GridPane.columnIndex="1">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="SCORE:" wrappingWidth="196.25860595703125" GridPane.columnIndex="2">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
+                     </font>
                   </Text>
                </children>
                <opaqueInsets>
                   <Insets bottom="5.0" top="10.0" />
                </opaqueInsets>
-               <padding>
-                  <Insets bottom="10.0" top="10.0" />
-               </padding>
             </GridPane>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="YOUR CURRENT SCORE:" wrappingWidth="296.15697026252747">
+            <Text fx:id="displayCurrentScore" strokeType="OUTSIDE" strokeWidth="0.0" text="YOUR CURRENT SCORE:" wrappingWidth="296.15697026252747">
+               <font>
+                  <Font name="Bauhaus 93" size="24.0" />
+               </font>
+            </Text>
+            <Text fx:id="pauseMessage1" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" text="Press spacebar to continue..." wrappingWidth="363.2640390396118">
+               <stroke>
+                  <LinearGradient endX="1.0" endY="1.0">
+                     <stops>
+                        <Stop>
+                           <color>
+                              <Color />
+                           </color>
+                        </Stop>
+                        <Stop offset="1.0">
+                           <color>
+                              <Color red="1.0" green="1.0" blue="1.0" />
+                           </color>
+                        </Stop>
+                     </stops>
+                  </LinearGradient>
+               </stroke>
                <font>
                   <Font name="Bauhaus 93" size="24.0" />
                </font>
