--- a/src/main/resources/BrickDestroy_GameBoard.fxml
+++ b/src/main/resources/BrickDestroy_GameBoard.fxml
@@ -310,7 +310,7 @@
             </Text>
          </children>
       </VBox>
-      <StackPane fx:id="pauseMenu" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#unpause" prefHeight="400.0" prefWidth="600.0">
+      <StackPane fx:id="pauseMenu" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#unpause" prefHeight="400.0" prefWidth="600.0" visible="false">
          <children>
             <ImageView fitHeight="400.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
                <image>
